k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: carbon
    tier: api
spec:
  ports:
  - port: 3001
  selector:
    app: carbon
    tier: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: carbon
    tier: api
spec: # Replica Set
  selector:
    matchLabels:
      app: carbon
      tier: api
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: carbon
        tier: api
    spec:
      containers:
      - image: "ghcr.io/cocodigrande2021/api:latest" #ghcr.io/cocodigrande2021/api-staging:latest
        name: api

        imagePullPolicy: Always

        ports:
        - containerPort: 3001
          name: api

      imagePullSecrets:
      - name: regcred
