k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: carbon
spec:
  ports:
    - port: 3306
  selector:
    app: carbon
    tier: db
  clusterIP: None
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: db
  labels:
    app: carbon
spec:
  selector:
    matchLabels:
      app: carbon
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: carbon
        tier: db
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-pv-claim
      imagePullSecrets:
        - name: regcred
