k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: cryptococks
    tier: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: cryptococks
    tier: redis
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: redis
  labels:
    app: cryptococks
    tier: redis
spec:
  selector:
    matchLabels:
      app: cryptococks
      tier: redis
  replicas: 1

  template:
    metadata:
      labels:
        app: cryptococks
        tier: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
